@@ -80,7 +80,8 @@ class BounceTest(unittest.TestCase):
         ('SimpleMatch', 'simple_36.txt', ['garyt@xxx.com']),
         ('SimpleMatch', 'simple_37.txt', ['user@uci.edu']),
         ('SimpleMatch', 'simple_38.txt', ['prueba@domain.com']),
-        ('SimpleMatch', 'simple_39.txt', [b'foo@mail.ru']),
+        ('SimpleMatch', 'simple_39.txt', ['foo@mail.ru']),
+        ('SimpleMatch', 'simple_41.txt', ['jeff.chan@intercitytime.com']),
         ('SimpleMatch', 'bounce_02.txt', ['acinsp1@midsouth.rr.com']),
         ('SimpleMatch', 'bounce_03.txt', ['james@jeborall.demon.co.uk']),
         # SimpleWarning
